hphp/hack/test/typecheck/override_use.php.exp
File "override_use.php", line 10, characters 16-20:
Cannot use function `C\foo` as `foo` because the name is already in use (Parsing[1002])
